# LLM_Hallucination_Checker

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  THREATS.md  conftest.py  pyproject.toml
.claude/skills/brief-shepardizer/: SKILL.md
.github/workflows/: ci.yml  release.yml
adapters/courtlistener/: adapter.py
adapters/maine/: README.md  adapter.py  fetch.py
adapters/maine/data/: 18c-sections.json  caselaw.json  cross-refs.json
adapters/maine/data/forms/: AD-008.json  DE-101.json
examples/: demo.py
hallucheck/: __init__.py  adapter.py  attest.py  benchmark.py  brief.py  caseaudit.py  challenge.py  cli.py  conformance.py  courtlistener.py  disclaimer.py  documents.py  docx_comments.py  embed.py  guard.py  inspector.py  links.py  pdfmerge.py  proxy.py  research.py  scan.py  sources.py  textnorm.py
hallucheck/hooks/: claude_code.py
tests/: test_adversarial.py  test_attest.py  test_benchmark.py  test_brief.py  test_caseaudit.py  test_challenge.py  test_cli.py  test_conformance.py  test_courtlistener.py  test_courtlistener_adapter.py  test_documents.py  test_docx_comments.py  test_embed.py  test_inspector.py  test_integration.py  test_links.py  test_maine_adapter.py  test_research.py  test_scan.py  test_sources.py
tests/fixtures/: sec3-108.html
tools/: verify_caselaw.py
