[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-hallucination-checker"
version = "0.8.1"
description = "Force closed-vocabulary citations, substitute the real source text, and inspect whether each conclusion is actually supported — with dead-link detection, tamper-evident attestation, and harness guards."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "bedardandy" }]
keywords = ["llm", "hallucination", "citations", "rag", "guardrails", "attestation"]
dependencies = []                      # core is stdlib-only

[project.optional-dependencies]
llm = ["openai>=1.40", "anthropic>=0.40"]   # inspector LLM (OpenAI-compatible or Claude)
docs = ["python-docx>=1.1", "reportlab>=4.0", "pdfrw>=0.4"]   # DOCX/PDF packets + opinion embedding
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.6", "mypy>=1.8"]

[project.scripts]
hallucheck = "hallucheck.cli:main"

[project.urls]
Homepage = "https://github.com/bedardandy/LLM_Hallucination_Checker"

[tool.setuptools]
packages = ["hallucheck", "hallucheck.hooks", "adapters", "adapters.maine",
            "adapters.courtlistener"]

[tool.setuptools.package-data]
"adapters.maine" = ["data/*.json", "data/forms/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Correctness + modernization, but respect the codebase's deliberately terse
# style (multi-statement lines, short names, the occasional assigned lambda).
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501", "E701", "E702", "E741", "E731"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
exclude = "tests/"
